--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "@capacitor/ios": "^4.0.0",
     "@capacitor/preferences": "^4.0.1",
     "@capacitor/splash-screen": "^4.0.0",
-    "@ionic/angular": "^5.6.7",
+    "@ionic/angular": "^6.7.5",
+    "@ionic/angular-server": "^6.7.5",
     "@ionic/pwa-elements": "^3.0.2",
     "core-js": "^3.6.5",
     "rxjs": "^6.5.5",
